# hermes-automotive-skills

./: .gitignore  LICENSE  README.md
skills/automotive-access-control/: SKILL.md
skills/automotive-adas/: SKILL.md
skills/automotive-aftermarket/: SKILL.md
skills/automotive-agent-definitions/: SKILL.md
skills/automotive-ai-ecu/: SKILL.md
skills/automotive-audio/: SKILL.md
skills/automotive-autosar/: SKILL.md
skills/automotive-battery/: SKILL.md
skills/automotive-battery-lifecycle/: SKILL.md
skills/automotive-body/: SKILL.md
skills/automotive-braking/: SKILL.md
skills/automotive-calibration/: SKILL.md
skills/automotive-charging/: SKILL.md
skills/automotive-chassis/: SKILL.md
skills/automotive-china-l2-adas-compliance/: SKILL.md
skills/automotive-china-l3-ads-compliance/: SKILL.md
skills/automotive-china-parking-compliance/: SKILL.md
skills/automotive-china-standards-overview/: SKILL.md
skills/automotive-cloud/: SKILL.md
skills/automotive-cockpit/: SKILL.md
skills/automotive-comfort/: SKILL.md
skills/automotive-commands/: SKILL.md
skills/automotive-crash-avoidance/: SKILL.md
skills/automotive-cybersecurity/: SKILL.md
skills/automotive-dfm-benchmarking/: SKILL.md
skills/automotive-diagnostics/: SKILL.md
skills/automotive-docs/: SKILL.md
skills/automotive-driver-monitoring/: SKILL.md
skills/automotive-dynamics/: SKILL.md
skills/automotive-e2e-safety-analysis/: SKILL.md
skills/automotive-ecu-systems/: SKILL.md
skills/automotive-embedded/: SKILL.md
skills/automotive-ev-tools/: SKILL.md
skills/automotive-examples-code/: SKILL.md
skills/automotive-examples-code/references/qnx-adaptive-platform/runtime/ara_com/: CMakeLists.txt
skills/automotive-examples-code/references/qnx-adaptive-platform/runtime/ara_com/include/ara/com/: skeleton.h  types.h
skills/automotive-examples-code/references/qnx-adaptive-platform/runtime/ara_com/src/: skeleton.cpp
skills/automotive-exhaust/: SKILL.md
skills/automotive-fuel-system/: SKILL.md
skills/automotive-hardware-safety/: SKILL.md
skills/automotive-helm/: SKILL.md
skills/automotive-hil-sil/: SKILL.md
skills/automotive-hmi/: SKILL.md
skills/automotive-hooks/: SKILL.md
skills/automotive-hpc/: SKILL.md
skills/automotive-hvac/: SKILL.md
skills/automotive-hydrogen-fuelcell/: SKILL.md
skills/automotive-infotainment/: SKILL.md
skills/automotive-knowledge/: SKILL.md
skills/automotive-kubernetes/: SKILL.md
skills/automotive-lighting/: SKILL.md
skills/automotive-logging/: SKILL.md
skills/automotive-manufacturing/: SKILL.md
skills/automotive-materials/: SKILL.md
skills/automotive-mbd/: SKILL.md
skills/automotive-middleware/: SKILL.md
skills/automotive-ml/: SKILL.md
skills/automotive-monitoring/: SKILL.md  prometheus.yml
skills/automotive-navigation/: SKILL.md
skills/automotive-network/: SKILL.md
skills/automotive-occupant-safety/: SKILL.md
skills/automotive-oem-decision/: SKILL.md
skills/automotive-parking/: SKILL.md
skills/automotive-powertrain/: SKILL.md
skills/automotive-powertrain-chassis/: SKILL.md
skills/automotive-project-management/: SKILL.md
skills/automotive-protocols/: SKILL.md
skills/automotive-qnx/: SKILL.md
skills/automotive-quantum/: SKILL.md
skills/automotive-regulatory-compliance/: SKILL.md
skills/automotive-rules/: SKILL.md
skills/automotive-safety/: SKILL.md
skills/automotive-safety-analysis/: SKILL.md
skills/automotive-satellite/: SKILL.md
skills/automotive-scenario-driven-testing/: SKILL.md
skills/automotive-scripts/: SKILL.md
skills/automotive-sdv/: SKILL.md
skills/automotive-security-systems/: SKILL.md
(+933 files in other folders)
